# MDTranslator

./: CMakeLists.txt  README.md
include/translator/: BaseTranslator.h  GeminiTranslator.h  pch.h
src/: main.cpp
src/translator/: GeminiTranslator.cpp
